fixed button bug on iphone

--- a/public/css/400page2.css
+++ b/public/css/400page2.css
@@ -56,6 +56,8 @@ button {
     width: 45px;
     border-radius: 4px;
     padding-bottom: 5px;
+    padding-right: 0;
+    padding-left: 0;
     
 }
 
